--- a/code/package.json
+++ b/code/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "start": "meteor --settings settings-development.json",
     "staging": "meteor deploy staging.meteor.com --settings settings-development.json",
-    "production": "meteor deploy production.meteor.com --settings settings-production.json"
+    "production": "meteor deploy tmc-014-demo.meteor.com --settings settings-production.json"
   }
 }
